fix flickering duration value

--- a/app/styles/_usersettings.scss
+++ b/app/styles/_usersettings.scss
@@ -148,7 +148,7 @@ $ember-power-select-disabled-background-color: #fff;
     max-width: 1120px;
 
     label {
-      max-width: 50%;
+      max-width: 70%;
     }
 
     h1 {
